<resources>
    <string name="app_name">rotinaPlus</string>
    <string name="app_shared_preferences_name">AppPrefs</string>
    <string name="logo_app_description">Logo do app Rotina+. É um escudo com um mais no meio em cima de um livro com uma coroa em cima podendo também indicar uma cruz (salvação). Um calendário na direita. Um relógio na esquerda.</string>
    <string name="name_requisition">Insira seu nome</string>
    <string name="email_requisition">Insira seu e-mail</string>
    <string name="password_requisition">Insira sua senha</string>
    <string name="password_forgotten"><u>Esqueci minha senha</u></string>
    <string name="login">Entrar</string>
    <string name="register"><u>Crie sua conta</u></string>
    <string name="register_uppercase">CRIE SUA CONTA</string>
    <string name="maintenance">Em construção…</string>
    <string name="back_to_login_instruction">Para voltar ao login\nclique na logo.</string>
    <string name="create_account">Criar Conta</string>
    <string name="back_to_login"><u>Voltar ao login</u></string>
    <string name="title_home">Olá,\n%s!</string>
    <string name="img_create_routine_png_description">Um relógio azul e branco, uma prancheta com tarefas marcadas como completa e um lápis amarelo com borracha azul escrevendo na mesma prancheta ao fundo tem cores azuis em formas redondas a direita e cores amarelas em formas redondas a esquerda.</string>
    <string name="img_my_routines_png_description">Um relógio azul e branco, um calendário com uma seta apontando para os dois lados e uma mini prancheta a direita com tarefas escritas. O fundo tem cores azuis em formatos redondo.</string>
    <string name="create_routine">Nova rotina</string>
    <string name="my_routines">Minhas rotinas</string>
    <string name="see_routines">Ver rotinas</string>
    <string name="current_routines">Rotina recente</string>
    <string name="current_routines_plural">Rotinas:</string>
    <string name="icon_home_png_description">Icone de casa, indicando que ao clicar vai para a tela home.</string>
    <string name="icon_create_routine_png_description">Icone de + circulado, indicando que ao clicar cria uma nova rotina.</string>
    <string name="icon_profile_1_png_description">Icone de humano, indicando que ao clicar entra no perfil do usuário.</string>
    <string name="no_routines">Você não tem rotinas cadastradas!\n\nCrie uma clicando logo acima.</string>
    <string name="title_create_routine">Criar nova rotina</string>
    <string name="create_routine_name">Nome da rotina</string>
    <string name="create_routine_description">Descrição da rotina</string>
    <string name="create_routine_hour">Hora da rotina (Ex: 13:00)</string>
    <string name="create_routine_days_of_week">Vai repetir na semana?\nEscolha os dias clicando abaixo:</string>
    <string name="sunday">Domingo</string>
    <string name="monday">Segunda-Feira</string>
    <string name="tuesday">Terça-Feira</string>
    <string name="wednesday">Quarta-Feira</string>
    <string name="thursday">Quinta-Feira</string>
    <string name="friday">Sexta-Feira</string>
    <string name="saturday">Sábado-Feira</string>
    <string name="back_to_home"><u>Voltar para home</u></string>
    <string name="invalid_hour">Preencha o horário com o formato HH:MM (ex: 12:30)</string>
    <string name="record_audio">Gravar áudio</string>
    <string name="play_audio">Reproduzir áudio</string>
    <string name="audio_warning">Segura no botão de audio para gravar.</string>
    <string name="label_name_current_routine">Nome: </string>
    <string name="label_description">Descrição</string>
    <string name="label_hour_current_routine">Hora: </string>
    <string name="title_my_profile">Seu Perfil:</string>
    <string name="label_name">Nome: </string>
    <string name="edit">Editar</string>
    <string name="new_name">Insira seu novo nome do perfil</string>
    <string name="label_hour">Hora</string>
    <string name="label_days_of_week">Dias em que ocorre: </string>
    <string name="label_description_edit">Insira a nova descrição para a rotina</string>
    <string name="finish_routine">Finalizar Rotina</string>
</resources>