<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light_1">

    <FrameLayout
        android:id="@+id/frameShapeDrawableHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_home"
        android:paddingVertical="90dp"/>

    <TextView
        android:id="@+id/txtTitleHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/frameShapeDrawableHome"
        app:layout_constraintBottom_toBottomOf="@+id/frameShapeDrawableHome"
        app:layout_constraintStart_toStartOf="@+id/frameShapeDrawableHome"
        android:textSize="45sp"
        android:textColor="@color/blue_light_2"
        android:fontFamily="@font/kotta_one_regular"
        android:text="@string/title_home"
        android:layout_marginStart="25dp"
        android:letterSpacing=".1"/>

    <LinearLayout
        android:id="@+id/layoutHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/frameShapeDrawableHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="48dp">

        <LinearLayout
            android:id="@+id/layoutCreateRoutineHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_home_1"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imgCreateRoutineHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/img_create_routine_png_description"
                android:src="@drawable/img_create_routine" />

            <Button
                android:id="@+id/btnCreateRoutineHome"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_main"
                android:fontFamily="@font/poppins_bold"
                android:letterSpacing=".1"
                android:text="@string/create_routine"
                android:textSize="11sp"
                app:backgroundTint="@null" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutMyRoutinesHome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/shape_home_1"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imgMyRoutinesHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_create_routine_png_description"
                android:src="@drawable/img_my_routines"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnMyRoutinesHome"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                app:backgroundTint="@null"
                android:background="@drawable/button_main"
                android:text="@string/see_routines"
                android:fontFamily="@font/poppins_bold"
                android:textSize="11sp"
                android:layout_gravity="center"
                android:letterSpacing=".1"
                android:layout_marginTop="25dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCurrentRoutinesHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layoutHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="25dp">

        <TextView
            android:id="@+id/txtTitleCurrentRoutinesHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/current_routines"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/blue_light_2"
            android:letterSpacing=".1"/>

        <TextView
            android:id="@+id/txtNoRoutinesHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_light_3"
            android:textSize="25sp"
            android:fontFamily="@font/poppins_bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:visibility="gone"
            android:letterSpacing=".1"/>

        <LinearLayout
            android:id="@+id/layoutRoutinesHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/shape_home_1"
            android:padding="5dp"
            android:gravity="center">

            <TextView
                android:id="@+id/txtTitleCurrentRoutine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/blue_light_2"
                android:fontFamily="@font/poppins_medium"
                android:letterSpacing=".1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/gray_light_1"
                android:fontFamily="@font/poppins_medium"
                android:letterSpacing=".1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/gray_light_1"
                android:fontFamily="@font/poppins_medium"
                android:letterSpacing=".1"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frameShapeDrawableBottomMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:background="@drawable/shape_home_2"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgBottomMenuIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_home_png_description"
            android:src="@drawable/icon_home"
            android:layout_gravity="start"
            android:layout_marginEnd="25dp"/>

        <ImageView
            android:id="@+id/imgCreateRoutineBottomMenuIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_create_routine_png_description"
            android:src="@drawable/icon_create_routine"/>

        <ImageView
            android:id="@+id/imgProfileBottomMenuIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_profile_1_png_description"
            android:src="@drawable/icon_profile_1"
            android:layout_marginStart="25dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>